@@ -3,6 +3,7 @@ Unreleased
 	* jug.backend.dict_store: Fix for Python 3
 	* jug.task: fix describe for Python 3
 	* jug.options: More flexible parsing of booleans
+	* jug.options: Support project-local configuration files (.jugrc/jugrc)
 
 Version 2.4.0 Thu 8 May 2025 by luispedro
 	* Tasklet: Support for lambda functions in Tasklets
